Use @enablePreview in tests in preference to explicit command line flags.